--- a/dadi/index.html
+++ b/dadi/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Mail</title>
   </head>
   <body>
 
